
target_include_directories(
    ${PROJECT_NAME} PUBLIC
    "/besfs/users/sunhk/boss-6.6.4.p03/workarea/InstallArea/include/HadronInfo"
    "/besfs/users/sunhk/boss-6.6.4.p03/workarea/InstallArea/include"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/Gaudi/GAUDI_v21r6/x86_64-slc5-gcc43-clhep2.0.4.5/InstallArea/include"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/ReconEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/BesDChain"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Analysis/VertexFit/VertexFit-00-02-71/VertexDbSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Analysis/VertexFit/VertexFit-00-02-71/src/test"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/VertexFit"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/ParticleID"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EvtRecEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MucRecEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/ExtEvent/ExtEvent-00-00-13"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/ExtEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/RawDataProviderSvc/RawDataProviderSvc-00-03-39"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/RawDataProviderSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Mdc/MdcRecEvent/MdcRecEvent-00-05-14"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MdcRecEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Tof/TofCaliSvc/TofCaliSvc-00-01-05"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/TofCaliSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Tof/TofQElecSvc/TofQElecSvc-00-00-04"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/TofQElecSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Mdc/MdcCalibFunSvc/MdcCalibFunSvc-00-03-15"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MdcCalibFunSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Emc/EmcCalibConstSvc/EmcCalibConstSvc-00-00-10/EmcCalibConstSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EmcCalibConstSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibROOTCnv/CalibROOTCnv-00-01-06"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibROOTCnv/CalibROOTCnv-00-01-06/src/cnv"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibROOTCnv/CalibROOTCnv-00-01-06/src/test"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibROOTCnv"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibTreeCnv/CalibTreeCnv-00-01-12"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibTreeCnv/CalibTreeCnv-00-01-12/src/cnv"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibTreeCnv/CalibTreeCnv-00-01-12/src/test"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibTreeCnv"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibMySQLCnv/CalibMySQLCnv-00-01-09"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibMySQLCnv"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibXmlCnvSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Calibration/CalibSvc/CalibDataSvc/CalibDataSvc-00-01-03"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibDataSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Tof/TofRecEvent/TofRecEvent-00-02-14"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/TofRecEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Emc/EmcRecEventModel/EmcRecEventModel-01-01-18"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EmcRecEventModel"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/DstEvent/DstEvent-00-02-50-p01"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/DstEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/McTruth/McTruth-00-02-19/McTruth"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/McTruth"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Mdc/MdcRawEvent/MdcRawEvent-00-03-08"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MdcRawEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Tof/TofRawEvent/TofRawEvent-00-02-07"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/TofRawEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EmcRawEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/RawEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/EvTimeEvent/EvTimeEvent-00-00-08"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EvTimeEvent"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Mdc/DedxCorrecSvc/DedxCorrecSvc-00-02-52"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/DedxCorrecSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Mdc/MdcGeomSvc/MdcGeomSvc-00-01-37"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MdcGeomSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Tof/TofCaliSvc/TofCaliSvc-00-01-05"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/TofQCorrSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MagneticField"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/EventModel/EventModel-01-05-31"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EventModel"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Emc/EmcRecGeoSvc/EmcRecGeoSvc-01-01-07"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EmcRecGeoSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EmcGeneralClass"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/MucGeomSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/G4Geo"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/DetectorDescription/Identifier/Identifier-00-02-13"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/Identifier"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Event/RelTable/RelTable-00-00-02"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/RelTable"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/RootPolicy"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/calibUtil"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/rdbModel"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/xmlBase"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/CalibData"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/facilities"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/DatabaseSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Emc/EmcWaveform/EmcWaveform-00-00-03/EmcWaveform"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/EmcWaveform"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/ROOTGeo"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/Simulation/BOOST/SimUtil/SimUtil-00-00-37/SimUtil"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/SimUtil"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/BesTimerSvc"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/InstallArea/include/DecayChain"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/BesCxxPolicy/BesCxxPolicy-00-01-01"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/app/releases/ROOT/5.24.00b/x86_64-slc5-gcc43-opt/root/include"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/GdmlToRoot/GdmlToRoot-00-00-13/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Saxana"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Saxana/Saxana"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Processes"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Processes/Processes"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Schema"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Schema/Schema"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Writer"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Writer/Writer"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/ROOTBinding/Processor"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/ROOTBinding/Processor/Processor"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/ROOTBinding/Subscribers"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/ROOTBinding/Subscribers/Subscribers"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/ROOTBinding/Evaluator"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/ROOTBinding/Evaluator/Evaluator"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/BesROOT/BesROOT-00-00-07/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/app/releases/ROOT/5.24.00b/x86_64-slc5-gcc43-opt/root/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/Boost/1.39.0_python2.5/x86_64-slc5-gcc43-opt/include/boost-1_39"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/BesFortranPolicy/BesFortranPolicy-00-01-03/src"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/GdmlToG4/GdmlToG4-00-00-10/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Saxana"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Saxana/Saxana"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Processes/"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Processes/Processes"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Schema"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Schema/Schema"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Writer"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/Common/Writer/Writer"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Evaluator"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Evaluator/G4Evaluator"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Processor"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Processor/G4Processor"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Subscribers"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Subscribers/G4Subscribers"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Writer"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/BesGDML/2.8.0/x86_64-slc5-gcc43-opt/CPPGDML/G4Binding/G4Writer/G4Writer"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/BesGeant4/BesGeant4-00-00-09/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/geant4/4.9.3.p01/x86_64-slc5-gcc43-opt/geant4.9.3.p01/include"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/BesCLHEP/BesCLHEP-00-00-09/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/CLHEP/Alist/Alist-00-00-06"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/packages/CLHEP/String/String-00-00-05"
    "/afs/.ihep.ac.cn/bes3/offline/ExternalLib/packages/CLHEP/2.0.4.5/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/CERNLIB/CERNLIB-01-02-02/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/cernlib/2006a/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/HepMC/2.03.11/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/HepPDT/2.05.04/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/XercesC/2.8.0/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/MYSQL/MYSQL-00-00-09/src"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/mysql/5.0.18/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/mysql/5.0.18/x86_64-slc5-gcc43-opt/include/mysql"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/external/sqlite/3.6.8/x86_64-slc5-gcc43-opt/include"
    "/afs/ihep.ac.cn/bes3/offline/ExternalLib/lcg/app/releases/LCGCMT/LCGCMT_57a_clhep2.0.4.5/LCG_SettingsCompat/src"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/DetectorDescription/GdmlManagement/GdmlManagement-00-00-31/src"
    "/afs/ihep.ac.cn/bes3/offline/Boss/6.6.4.p03/External/BesExternalArea/BesExternalArea-00-00-21/src"
    )


# from `cmt show macro_value <PACKAGE_NAME>_shlibflags`
set(LIBNAMES
    
)
set(LIBDIRS
    
)
# DO NOT replace semicolon!
# string(REPLACE ";" " " LIBDIRS "${LIBDIRS}")

# from `cmt show macro_value cppflags`
target_compile_options(${PROJECT_NAME} PUBLIC
    -fmessage-length=0 -Wall -Wextra -pthread -Wno-deprecated
    -Wno-empty-body -D_GNU_SOURCE -pthread -pipe -ansi -pedantic -W -Wall
    -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wno-long-long
    -march=x86-64 -mtune=x86-64 -pedantic-errors -O2 -DEXTEND
    )
# from `cmt show macro_value cpplinkflags`
# and partly from `cmt show macro_value <PACKAGE_NAME>_shlibflags`
target_link_options(${PROJECT_NAME} PUBLIC
    -Wl,-Bdynamic -ldl -Wl,--no-undefined -Wl,--export-dynamic
    )

foreach(LIBN ${LIBNAMES})
    find_library(TEMPLIB
        NAMES ${LIBN}
        PATHS ${LIBDIRS} ENV LD_LIBRARY_PATH
        NO_DEFAULT_PATH
    )
    if(NOT TEMPLIB)
        message("*** ${LIBN} IS NOT FOUND! ***")
    endif()

    target_link_libraries(${PROJECT_NAME}
        PUBLIC ${TEMPLIB})

    # clear temp variable.
    unset(TEMPLIB CACHE)
endforeach()

